// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Utils) EntityHelper deleteEntityInList - should delete entity in List based on UID 1`] = `
Array [
  Object {
    "metadata": Object {
      "name": "A",
      "uid": "uid1",
    },
  },
]
`;

exports[`(Utils) EntityHelper functionFromParams - should create Function entity from params 1`] = `
Object {
  "apiVersion": "kubeless.io/v1beta1",
  "kind": "Function",
  "metadata": Object {
    "name": "funcName",
    "namespace": "kubeless",
  },
  "spec": Object {
    "checksum": "sha256:e4032e36ebd8b1e2e7249bff8ef675a32d01a1f96ead2b6979fa9d3a2c53f371",
    "deps": "",
    "function": "//code goes here",
    "handler": "funcName.foo",
    "runtime": undefined,
  },
}
`;

exports[`(Utils) EntityHelper updateEntityInList - should update entity in List based on UID 1`] = `
Array [
  Object {
    "metadata": Object {
      "name": "A",
      "uid": "uid1",
    },
  },
  Object {
    "metadata": Object {
      "name": "B2",
      "uid": "uid2",
    },
  },
]
`;
